# tauri-app

./: .prettierrc.json  .sc-bundle.lnk  HYReadme.md  README.md  package.json  pnpm-lock.yaml  tauri-app.lnk  vscode-launch.json
src/: App.tsx  index.css
src-tauri/: .gitignore  .taurignore  Cargo.toml  ChangeFolder.bat  build.rs
src-tauri/generate_base/map/: map_base.h
src-tauri/src/: lib.rs  main.rs  temp
src-tauri/src/c/: hytest.c  hytest.h  rd.c
src-tauri/src/mods/: box_error_mod.rs  directory_mod.rs  log_mod.rs  loop_cmd_mod.rs  map_mod.rs  matlab_mod.rs  mcu_cmd_mod.rs  mcu_const.rs  mcu_control_mod.rs  mcu_store_mod.rs  packet_mod.rs  packet_proc_mod.rs  plotter_mod.rs  port_async_mod.rs  tauri_test_mod.rs  type_change_mod.rs  uart_async_mod.rs  uart_mod.rs  uart_packet_mod.rs  uart_packet_proc_mod.rs  user_vec_mod.rs  wifi_mod.rs  wifi_packet_mod.rs  wifi_packet_proc_mod.rs
src-tauri/src/mods/unuse/: port_sync_mod.rs
src/components/: ChartGenerateComp.tsx  DarkModeComp.tsx  DarkModeComponent.tsx  MapDisplayComp.tsx  MapDisplayComponent.tsx  MapGeneratorComp.tsx  PageSelectComp.tsx  PageSelectComponent.tsx  PortOCComp.tsx  SerialComp.tsx  SerialComponent.tsx  UartControlComp.tsx  UartPortOCComp.tsx  WifiControlComp.tsx  chart_generate.tsx  dark_mode.tsx  map.tsx  map_generator.tsx  page_select.tsx  port_oc.tsx  serial.tsx  test.tsx
