[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["AUTHERS"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cc = "1.2.19"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.2"
plotters = "0.3.7"
rand = "0.9.1"
base64 = "0.22.1"
libc = "0.2.172"
log = "0.4.27"
fern = "0.7.1"
ansi_term = "0.12.1"
chrono = "0.4.40"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-serial = "5.4.5"
libloading = "0.8.7"
num-traits = "0.2.19"
